<resources>
    <string name="app_name">GameAPP</string>
    <string name="connection">"Connection error"</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_profiles">Profiles</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_update">Update</string>
    <string name="Update">UPDATE</string>
    <string name="prompt_email">Email</string>
    <string name="signup">Sign Up</string>
    <string name="signin">LOGIN</string>
    <string name="edad">Age:</string>
    <string name="bscore">Best score:</string>
    <string name="lang">Change Language</string>
    <string name="dif">Change Dificulty</string>
    <string name="privacyerror">Accept privacy policy</string>
    <string name="str_en" >English</string>
    <string name="str_es" >Spanish</string>
    <string-array name="languages" >
        <item>@string/str_en</item>
        <item>@string/str_es</item>
    </string-array>
    <string name="fn">First name</string>
    <string name="ln">Last name</string>
    <string name="age">Age</string>
    <string name="tscore">Total score:</string>
    <string name="ttime">Total time:</string>
    <string name="lscore">Last score:</string>
    <string name="ltime">Last time:</string>
    <string name="sc">Score/Game</string>
    <string name="tc">Time/Game</string>
    <string name="play">PLAY</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="top">Top 10 players</string>
    <string name="settings">SETTINGS</string>
    <string name="save">SAVE</string>
    <string name="stats">STATS</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_age">Insert a valid age</string>
    <string name="invalid_name">First/last name must contain only letters</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signup_failed">"Signup failed"</string>
    <string name="profile_failed">"Get profile failed"</string>
    <string name="privacyP">I have read and accept the <u>privacy policy</u></string>
    <string name="game_view_content_description" translatable="false">Game view</string>

    <string name="privacy">
    Privacy Policy
        \n
    Iñaki Clavero Carballo built the Space Fighters app as an Open Source app. This SERVICE is provided by Iñaki Clavero Carballo at no cost and is intended for use as is.
\n
    This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
\n
    If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
\n
    The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at Space Fighters unless otherwise defined in this Privacy Policy.
\n \n
    Information Collection and Use
\n
    For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to email, first name, last name, age, game stats. The information that I request will be retained on your device and is not collected by me in any way.
\n
    The app does use third-party services that may collect information used to identify you.
\n
    Link to the privacy policy of third-party service providers used by the app
\n \n
    Unity
        \n
    Log Data
\n
    I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
\n \n
    Cookies
\n
    Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.
\n
    This Service does not use these “cookies” explicitly. However, the app may use third-party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
\n \n
    Service Providers
\n
    I may employ third-party companies and individuals due to the following reasons:
\n
    To facilitate our Service;
        \n
    To provide the Service on our behalf;
        \n
    To perform Service-related services;
        \n \n
    To assist us in analyzing how our Service is used.
        \n
    I want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
\n \n
    Security
\n
    I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
\n \n
    Links to Other Sites
\n
    This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
 \n \n
    Children’s Privacy
\n
    These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13 years of age. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do the necessary actions.
\n \n
    Changes to This Privacy Policy
\n
    I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.
\n \n
    This policy is effective as of 2022-06-08
\n \n
    Contact Us
\n \n
    If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at SpaceFightersGame@gmail.com.

    </string>
</resources>